Cleaned up requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-moviepy
-pycocotools
-numpy
-scipy
-Pillow
-cython
-matplotlib
+moviepy==1.0.1
 scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
-opencv-contrib-python-nonfree
-h5py
-imgaug
-IPython[all]
+tensorflow==1.15.2
+keras==2.3.1
+opencv-contrib-python-nonfree==4.1.1.1
+tabulate==0.8.6
